# Embedded_Platform

./: .gitignore  .mbed  CMakeLists.txt  LICENSE-apache-2.0.txt  LICENSE.md  Makefile  README.md  ToDo.md  clean_build_flash.bat  flash_win.bat  main.cpp  make.exe.stackdump  mbed.bld  mbed_app.json  mbed_config.h  newComponent.py
SongConversion/: convert_song.py  song_data.c
doc/: Doxyfile  RcCar_Nucleo_Soft.chm  RcCar_Nucleo_Soft.chw  clean.bat
doc/source/: Doxyfile  brain_layer.rst  conf.py  development.rst  hardware_layer.rst  index.rst  periodics_layer.rst  releasenote.rst  requirements.txt  signal_layer.rst  utils_layer.rst
examples/: main_ex0.cpp  main_ex1.cpp  main_ex2.cpp
include/: main.hpp
include/BezierCurve/: beziercurve.hpp  beziercurve.inl  polynomialfunction.hpp  polynomialfunction.inl
include/BezierMotionPlanner/: beziermotionplanner.hpp
include/CommandInterpreter/: commandinterpreter.hpp
include/Controllers/: converters.inl  pidcontroller.hpp  pidcontroller.inl
include/Drivers/: vnh.hpp
include/Encoders/: quadratureencoder.hpp
include/Filter/: filter.hpp  filter.inl
include/Linalg/: linalg.inl
include/MotionController/: motioncontroller.hpp
include/Move/: move.hpp
include/SHARP_IR_distance/: drivertask.hpp
include/SafetyStop/: safetystopfunction.hpp
include/SerialMonitor/: serialmonitor.hpp
include/SystemModels/: systemmodels.hpp
include/TaskManager/: taskmanager.hpp
include/Timer/: timer.inl
license/: license_header_template_BOSCH_19.txt
newComponent/: newComponent.py
source/: main.cpp
src/: main.cpp
(+250 files in other folders)
